jenkins-manual.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: jenkins
spec:
  containers:
  - image: jenkins
    name: kubia
    ports:
    - containerPort: 8080 #purely informational
      protocol: TCP
