kubia-manual.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: kubia-manual
spec:
  containers:
  - image: jdiegoreyes/kubia
    name: kubia
    ports:
    - containerPort: 8080 #purely informational
      protocol: TCP
