jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    run: jenkins
