kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
  - nodePort: 30182
    port: 8080
    targetPort: 8080
  selector:
    app: kubia-replicaset
  type: NodePort
